--- a/Workshop/Pages/RealizeActivity.razor
+++ b/Workshop/Pages/RealizeActivity.razor
@@ -3,7 +3,7 @@
 @using System.Threading.Tasks
 @using System.Text.Json;
 @using System.Text.Json.Serialization;
-@inject IActivityService _activityService
+@inject IActivityService activityService
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 
 <head>
@@ -40,7 +40,7 @@
 @code {
     protected override async Task OnInitializedAsync()
     {
-        activities = new List<Activity> { new Activity() }; // _activityService.GetAllActivities().ToList();
+        activities = new List<Activity> { new Activity() }; // activityService.GetAllActivities().ToList();
         await base.OnInitializedAsync();
     }
 
