--- a/Workshop/_Imports.razor
+++ b/Workshop/_Imports.razor
@@ -11,7 +11,9 @@
 @using Workshop.Models
 @using Workshop.DataAccess
 @using Workshop.Interfaces
+@using Workshop.Interfaces.Services
 @using Workshop.Services
+@using Workshop.Interfaces.Services
 @using Workshop.Enums
 @using Workshop.Dtos
 @using Workshop.Utils
