--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -34,6 +34,16 @@
                     <span class="oi oi-plus" aria-hidden="true"></span> Samochody
                 </NavLink>
             </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="addRequest">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Rejestruj Zgłoszenie
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="requestList">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Zgłoszenia
+                </NavLink>
+            </li>
         </AuthorizeView>
         <AuthorizeView Roles="@($"{Role.Administrator}")">
             <Authorized>
