--- a/Workshop/_Imports.razor
+++ b/Workshop/_Imports.razor
@@ -11,6 +11,7 @@
 @using Workshop.Models
 @using Workshop.DataAccess
 @using Workshop.Interfaces
+@using Workshop.Interfaces.Services
 @using Workshop.Services
 @using Workshop.Enums
 @using Workshop.Dtos
