--- a/Workshop/Pages/Clients.razor
+++ b/Workshop/Pages/Clients.razor
@@ -11,7 +11,7 @@
 }
 else
 {
-    <table class="table">
+    <table class="table  table-striped table-bordered"  style="text-align:center;">
         <thead>
             <tr>
                 <th>Imię</th>
