Fixed activities table

--- a/Workshop/Pages/Activities.razor
+++ b/Workshop/Pages/Activities.razor
@@ -16,6 +16,7 @@
             <th>Status</th>
             <th>Data rejestracji aktywności</th>
             <th>Data zakończenia aktywności</th>
+            <th>Akcje</th>
         </tr>
     </thead>
     <tbody>
