--- a/Workshop/Pages/AddRequest.razor
+++ b/Workshop/Pages/AddRequest.razor
@@ -10,33 +10,40 @@
     Rejestruj Zgłoszenie
 </h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form>
-            <div class="form-group">
-                <label for="Name" class="control-label">Opis Zgłoszenia</label>
-                <input for="Name" class="form-control" @bind-value="@request.Description" />
-            </div>
-            <div class="form-group">
-                <label for="Name" class="control-label">Numer Rejestracyjny</label>
-                <input for="Name" class="form-control" @bind-value="@request.Car.RegistrationNumber" />
-            </div>
-            <div class="form-group">
-                <label for="Role" class="control-label">Menadżer odpowiedzialny</label>
-                <select for="Name" class="form-control" @bind="chosenManager.Id">
-                    @foreach (var manager in managers)
-                    {
-                        <option value=@manager.Id>@(manager.FirstName + " " + manager.LastName)</option>
-                    }
-                </select>
-            </div>
-            <div class="form-group">
-                <button type="button" class="btn btn-primary" @onclick="() => CreateRequest(request)">Zapisz</button>
-                <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
-            </div>
-        </form>
+@if (managers == null)
+{
+    <div class="spinner"></div>
+}
+else
+{
+    <div class="row">
+        <div class="col-md-4">
+            <form>
+                <div class="form-group">
+                    <label for="Name" class="control-label">Opis Zgłoszenia</label>
+                    <input for="Name" class="form-control" @bind-value="@request.Description" />
+                </div>
+                <div class="form-group">
+                    <label for="Name" class="control-label">Numer Rejestracyjny</label>
+                    <input for="Name" class="form-control" @bind-value="@request.Car.RegistrationNumber" />
+                </div>
+                <div class="form-group">
+                    <label for="Role" class="control-label">Menadżer odpowiedzialny</label>
+                    <select for="Name" class="form-control" @bind="chosenManager.Id">
+                        @foreach (var manager in managers)
+                        {
+                            <option value=@manager.Id>@(manager.FirstName + " " + manager.LastName)</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary" @onclick="() => CreateRequest(request)">Zapisz</button>
+                    <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
+}
 
 @code {
 
@@ -46,7 +53,7 @@
         Manager = new Employee(),
         Activities = new List<Activity>()
     };
-    private IEnumerable<Employee> managers = new List<Employee>();
+    private IEnumerable<Employee> managers;
     private Employee chosenManager = new Employee();
 
     protected override async Task OnInitializedAsync()
