--- a/Workshop/Pages/EditCar.razor
+++ b/Workshop/Pages/EditCar.razor
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label for="Role" class="control-label">Typ</label>
-                <select for="Role" class="form-control" @bind="@chosenCarType.Code">
+                <select for="Role" class="form-control" @bind="@chosenCarTypeCode">
                     @foreach (CarType cartype in cartypes)
                     {
                         <option value="@cartype.Code">@cartype.TypeName</option>
@@ -49,18 +49,19 @@
     [Parameter]
     public Guid CarId { get; set; }
     private Car car = new Car();
-    private CarType chosenCarType = new CarType();
+    private string chosenCarTypeCode;
     private IEnumerable<CarType> cartypes = new List<CarType>();
 
     protected override async Task OnParametersSetAsync()
     {
         car = await carService.GetCar(CarId);
+        chosenCarTypeCode = car.CarType.Code;
         cartypes = await carTypeService.GetAllAsync();
     }
 
     protected async Task DoEditCar(Car car)
     {
-        car.CarType = await carTypeService.GetTypeByCode(car.CarType.Code);
+        car.CarType = await carTypeService.GetTypeByCode(chosenCarTypeCode);
         carService.Update(car);
         await carService.SaveChangesAsync();
         navigationManager.NavigateTo("/cars");
