--- a/Workshop/Pages/Cars.razor
+++ b/Workshop/Pages/Cars.razor
@@ -1,6 +1,8 @@
 ﻿@page "/cars"
 @inject ICarService carService
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject CarContext carContext
 @attribute [AuthorizeRoles(Role.Manager)]
 
 <h1>Samochody</h1>
@@ -32,6 +34,9 @@ else
                     <td>
                         <button type="button" class="btn btn-warning" @onclick="() => EditCar(car)">Edytuj</button>
                         <button type="button" class="btn btn-danger" @onclick="() => DeleteCar(car)">Usuń</button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary" @onclick="() => AddRequest(car)">Dodaj zgłoszenie</button>
                     </td>
                     <td>
                         <button type="button" class="btn btn-primary" @onclick="() => AddCar(car)">Przypisz</button>
@@ -66,6 +71,11 @@ else
     void AddCar(Car car)
     {
         navigationManager.NavigateTo($"/addCar/{car.Client.Id}");
+    }
+
+    private async Task AddRequest(Car car)
+    {
+        navigationManager.NavigateTo($"/AddRequest/{car.Id}/{carContext.currentUser.Id}");
     }
 
 
