--- a/Workshop/Pages/Activities.razor
+++ b/Workshop/Pages/Activities.razor
@@ -6,50 +6,64 @@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 
 <h1>Realizuj Aktywności</h1>
+@if (activities == null)
+{
+    <div class="spinner"></div> }
+else
+{
+    @if (activities.Any())
+    {
+        <table id="activityTable" class="table table-striped table-bordered" style="text-align:center;">
+            <thead>
+                <tr>
+                    <th>Typ</th>
+                    <th>Opis</th>
+                    <th>Wynik</th>
+                    <th>Status</th>
+                    <th>Data rejestracji aktywności</th>
+                    <th>Data zakończenia aktywności</th>
+                    <th>Akcje</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var activity in activities)
+                {
+                    <tr>
+                        <td>@activity.ActivityType</td>
+                        <td>@activity.Description</td>
+                        <td>@activity.Result</td>
+                        <td>@activity.Status</td>
+                        <td>@activity.Registered</td>
+                        <td>@activity.FinishedOrCancelled</td>
+                        <td>
+                            <button type="button" class="btn btn-warning" @onclick="() => RealizeActivity(activity)">Wykonaj</button>
+                            <button type="button" class="btn btn-danger" @onclick="() => EndActivity(activity)">Zakończ</button>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <div style="padding-top: 25px">
+            <h2>To zlecenie nie ma żadnych aktywności</h2>
 
-<table id="activityTable" class="table table-striped table-bordered" style="text-align:center;">
-    <thead>
-        <tr>
-            <th>Typ</th>
-            <th>Opis</th>
-            <th>Wynik</th>
-            <th>Status</th>
-            <th>Data rejestracji aktywności</th>
-            <th>Data zakończenia aktywności</th>
-            <th>Akcje</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var activity in activities)
-        {
-            <tr>
-                <td>@activity.ActivityType</td>
-                <td>@activity.Description</td>
-                <td>@activity.Result</td>
-                <td>@activity.Status</td>
-                <td>@activity.Registered</td>
-                <td>@activity.FinishedOrCancelled</td>
-                <td>
-                    <button type="button" class="btn btn-warning" @onclick="() => RealizeActivity(activity)">Wykonaj</button>
-                    <button type="button" class="btn btn-danger" @onclick="() => EndActivity(activity)">Zakończ</button>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+        </div>
+    }
+}
 
 
 @code {
     [Parameter]
     public Guid RequestId { get; set; }
-    private Request request = new Request();
-    private IEnumerable<Activity> activities = new List<Activity>() { new Activity() };
+    private Request request;
+    private IEnumerable<Activity> activities;
 
     protected override async Task OnInitializedAsync()
     {
         request = await requestService.GetRequest(RequestId);
-        //activities = request.Activities;
-        //new List<Activity> { new Activity() }; // activityService.GetAllActivities().ToList();
+        activities = request.Activities;
         await base.OnInitializedAsync();
     }
 
