--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -34,7 +34,7 @@
                     <span class="oi oi-plus" aria-hidden="true"></span> Samochody
                 </NavLink>
             </li>
-            <li class="nav-item px-3">
+            @*<li class="nav-item px-3">
                 <NavLink class="nav-link" href="addRequest">
                     <span class="oi oi-plus" aria-hidden="true"></span> Rejestruj Zgłoszenie
                 </NavLink>
@@ -43,7 +43,7 @@
                 <NavLink class="nav-link" href="requestList">
                     <span class="oi oi-plus" aria-hidden="true"></span> Zgłoszenia
                 </NavLink>
-            </li>
+            </li>*@
         </AuthorizeView>
         <AuthorizeView Roles="@($"{Role.Administrator}")">
             <Authorized>
