--- a/Workshop/Shared/MainLayout.razor
+++ b/Workshop/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
     <NavMenu />
 </div>
 
-<div class="main">
+<div class="main" style="z-index: 10">
 
     <div class="top-row px-4">
         <AuthorizeView>
