--- a/Workshop/Shared/MainLayout.razor
+++ b/Workshop/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
 <div class="main" style="z-index: 10">
 
-    <div class="top-row px-4">
+    <div class="top-row px-4" style="z-index: 10">
         <AuthorizeView>
             <Authorized>
                 <NavLink class="nav-link" href="login" @onclick="(() => Logout())">
