navigation + edit button

--- a/Workshop/Pages/AddActivities.razor
+++ b/Workshop/Pages/AddActivities.razor
@@ -126,6 +126,7 @@
             }
         }
         await activityService.SaveChangesAsync();
+        navigationManager.NavigateTo($"/requests");
     }
 
     private void MoveUp(Activity activity)
