assigning activities to workers

--- a/Workshop/Pages/Activities.razor
+++ b/Workshop/Pages/Activities.razor
@@ -1,4 +1,4 @@
-﻿@page "/activities/{RequestId:guid}"
+﻿@page "/activities"
 
 @using System.Threading.Tasks
 @inject IActivityService activityService
