--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                     <span class="oi oi-plus" aria-hidden="true"></span> Zgłoszenia
                 </NavLink>
             </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="workers">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Pracownicy
+                </NavLink>
+            </li>
         </AuthorizeView>
         <AuthorizeView Roles="@($"{Role.Administrator}")">
             <Authorized>
