--- a/Workshop/Pages/AssignActivities.razor
+++ b/Workshop/Pages/AssignActivities.razor
@@ -5,45 +5,59 @@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 @attribute [AuthorizeRoles(Role.Manager)]
 
-<h3>Przypisz czynności</h3>
-
-<div class="row" style="padding-top: 20px">
-    <div class="col-md-4">
-        <button type="button" class="btn btn-primary" @onclick="() => Assign()">Zapisz</button>
-    </div>
-</div>
-
-@if (request == null)
+@if(Guid.Empty == WorkerId) 
+{ 
+    <h3>
+        Brak przypisywanego pracownika!
+    </h3>
+}
+else if (worker == null)
 {
     <div class="spinner"></div>
 }
 else
 {
-    <table class="table  table-striped table-bordered" style="text-align:center;">
-        <thead>
-            <tr>
-                <th>Opis</th>
-                <th>Typ</th>
-                <th>Wynik</th>
-                <th>Data rozpoczęcia</th>
-                <th>Przypisany pracownik</th>
-                <th>Przypisz</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach(var activity in activities)
-            {
+    <h3>
+        Przypisywany pracownik: @worker.FirstName @worker.LastName (@worker.Username)
+    </h3>
+    <div class="row" style="padding-top: 10px; padding-bottom: 10px">
+        <div class="col-md-4">
+            <button type="button" class="btn btn-primary" @onclick="() => Assign()">Zapisz</button>
+        </div>
+    </div>
+
+    @if (request == null)
+    {
+        <div class="spinner"></div>
+    }
+    else
+    {
+        <table class="table  table-striped table-bordered" style="text-align:center;">
+            <thead>
                 <tr>
-                    <td>@activity.Description</td>
-                    <td>@activity.ActivityType.ActivityName</td>
-                    <td>@activity.Result</td>
-                    <td>@activity.Registered</td>
-                    <td>@(activity.Worker != null ? activity.Worker.FirstName + " " + activity.Worker.LastName + " (" + activity.Worker.Username + ")" : "Brak")</td>
-                    <td><input type="checkbox" class="checkbox-assign" @bind="assignActivities[activities.IndexOf(activity)]"></td>
+                    <th>Opis</th>
+                    <th>Typ</th>
+                    <th>Wynik</th>
+                    <th>Data rozpoczęcia</th>
+                    <th>Przypisany pracownik</th>
+                    <th>Przypisz</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var activity in activities)
+                {
+                    <tr>
+                        <td>@activity.Description</td>
+                        <td>@activity.ActivityType.ActivityName</td>
+                        <td>@activity.Result</td>
+                        <td>@activity.Registered</td>
+                        <td>@(activity.Worker != null ? activity.Worker.FirstName + " " + activity.Worker.LastName + " (" + activity.Worker.Username + ")" : "Brak")</td>
+                        <td><input type="checkbox" class="checkbox-assign" @bind="assignActivities[activities.IndexOf(activity)]"></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
 }
 
 @code {
@@ -62,7 +76,7 @@ else
         worker = await employeeService.GetById(WorkerId);
         activities = request.Activities.ToList();
         assignActivities = new List<bool>();
-        foreach(var activity in request.Activities)
+        foreach (var activity in request.Activities)
         {
             assignActivities.Add(false);
         }
@@ -73,7 +87,7 @@ else
         for (int i = 0; i < assignActivities.Count; i++)
         {
             var activity = request.Activities.ElementAt(i);
-            if(assignActivities[i] == true)
+            if (assignActivities[i] == true)
             {
                 activity.Worker = worker;
                 activityService.Update(activity);
