--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -56,7 +56,7 @@
         </AuthorizeView>
         <AuthorizeView Roles="@($"{Role.Worker}")">
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="requests" Match="NavLinkMatch.All">
+                <NavLink class="nav-link" href="activities" Match="NavLinkMatch.All">
                     <span class="oi oi-home" aria-hidden="true"></span> Realizuj czynność
                 </NavLink>
             </li>
